tests/good/struct/tuple_def.go
package main;
type S struct { x,y int }


func main() {}


/*
== Expected compiler output ==

*/